[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemy/Monster1.png" type="Texture" id=1]
[ext_resource path="res://Enemy/TestingMonster2.gd" type="Script" id=2]
[ext_resource path="res://Atta_Detect/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemy/SoftCollision.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 81.265
height = 82.0496

[sub_resource type="CapsuleShape2D" id=2]
radius = 80.0
height = 80.0

[sub_resource type="CircleShape2D" id=3]
radius = 808.0

[sub_resource type="CircleShape2D" id=4]
radius = 120.266

[node name="TestingMonster2" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )
retreat_speed = -250

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, -3.8147e-06 )
scale = Vector2( 0.41185, 0.41185 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
scale = Vector2( 0.695122, 0.695122 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 1.90735e-06, 1.48866e-06 )
scale = Vector2( 0.695122, 0.695122 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 6.0

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 4 )

[node name="BulletSpawnPoint" type="Position2D" parent="."]
position = Vector2( 64, 24 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]
